Implement editable nomenclature persistence
