# backend/src/main/scala/gardening/adapters/http/JournalApi.scala
@@ -37,8 +37,37 @@ object JournalApi:
       .errorOut(JournalError.edit)
       .out(jsonBody[Operation]).summary("Edit a plant operation")
 
+  private val getComponentsEndpoint =
+    journalEndpoint.get.in("substrate-components").out(jsonBody[Vector[SubstrateComponent]]).summary("List substrate components")
+  private val addComponentEndpoint =
+    journalEndpoint.post.in("substrate-components").in(jsonBody[SubstrateComponentData])
+      .out(statusCode(StatusCode.Created)).out(jsonBody[SubstrateComponent]).summary("Add a substrate component")
+  private val editComponentEndpoint =
+    endpoint.put.in("substrate-components" / path[String]("componentId")).in(jsonBody[SubstrateComponentData])
+      .errorOut(JournalError.catalogEdit).out(jsonBody[SubstrateComponent]).summary("Edit a substrate component")
+
+  private val getPesticidesEndpoint =
+    journalEndpoint.get.in("pesticides").out(jsonBody[Vector[Pesticide]]).summary("List pesticides")
+  private val addPesticideEndpoint =
+    journalEndpoint.post.in("pesticides").in(jsonBody[PesticideData])
+      .out(statusCode(StatusCode.Created)).out(jsonBody[Pesticide]).summary("Add a pesticide")
+  private val editPesticideEndpoint =
+    endpoint.put.in("pesticides" / path[String]("pesticideId")).in(jsonBody[PesticideData])
+      .errorOut(JournalError.catalogEdit).out(jsonBody[Pesticide]).summary("Edit a pesticide")
+
   private[http] val publicEndpoints: List[AnyEndpoint] =
-    List(getPlantsEndpoint, getOperationsEndpoint, logOperationEndpoint, editOperationEndpoint)
+    List(
+      getPlantsEndpoint,
+      getOperationsEndpoint,
+      logOperationEndpoint,
+      editOperationEndpoint,
+      getComponentsEndpoint,
+      addComponentEndpoint,
+      editComponentEndpoint,
+      getPesticidesEndpoint,
+      addPesticideEndpoint,
+      editPesticideEndpoint
+    )
 
   def serverEndpoints(using journal: PlantJournal): List[ServerEndpoint[Any, Identity]] =
     List(
@@ -67,7 +96,43 @@ object JournalApi:
           case EditOperationResult.OperationTypeMismatch =>
             JournalError.operationTypeMismatch.asLeft
           case EditOperationResult.Corrupted(_) | EditOperationResult.EditFailed(_) =>
-            JournalError.editFailed.asLeft
+            JournalError.editFailed.asLeft,
+      getComponentsEndpoint.handle: _ =>
+        journal.getSubstrateComponents match
+          case CatalogReadResult.Read(components) => components.asRight
+          case CatalogReadResult.ReadFailed(_)    =>
+            (StatusCode.InternalServerError, JournalError.catalogReadFailed).asLeft,
+      addComponentEndpoint.handle: data =>
+        journal.addSubstrateComponent(data) match
+          case CatalogAddResult.Added(component) => component.asRight
+          case CatalogAddResult.AddFailed(_)     =>
+            (StatusCode.InternalServerError, JournalError.catalogWriteFailed).asLeft,
+      editComponentEndpoint.handle: (encodedId, data) =>
+        SubstrateComponentId.parse(encodedId) match
+          case None     => JournalError.catalogInvalidId.asLeft
+          case Some(id) =>
+            journal.editSubstrateComponent(id, data) match
+              case CatalogEditResult.Edited(component) => component.asRight
+              case CatalogEditResult.RecordMissing     => JournalError.catalogRecordMissing.asLeft
+              case CatalogEditResult.EditFailed(_)     => JournalError.catalogWriteFailed.asLeft,
+      getPesticidesEndpoint.handle: _ =>
+        journal.getPesticides match
+          case CatalogReadResult.Read(pesticides) => pesticides.asRight
+          case CatalogReadResult.ReadFailed(_)    =>
+            (StatusCode.InternalServerError, JournalError.catalogReadFailed).asLeft,
+      addPesticideEndpoint.handle: data =>
+        journal.addPesticide(data) match
+          case CatalogAddResult.Added(pesticide) => pesticide.asRight
+          case CatalogAddResult.AddFailed(_)     =>
+            (StatusCode.InternalServerError, JournalError.catalogWriteFailed).asLeft,
+      editPesticideEndpoint.handle: (encodedId, data) =>
+        PesticideId.parse(encodedId) match
+          case None     => JournalError.catalogInvalidId.asLeft
+          case Some(id) =>
+            journal.editPesticide(id, data) match
+              case CatalogEditResult.Edited(pesticide) => pesticide.asRight
+              case CatalogEditResult.RecordMissing     => JournalError.catalogRecordMissing.asLeft
+              case CatalogEditResult.EditFailed(_)     => JournalError.catalogWriteFailed.asLeft
     )
 
   private given circeConfiguration: CirceConfiguration =
@@ -92,12 +157,23 @@ object JournalApi:
   private given Codec[Instant]     =
     Codec.from(Decoder.decodeString.emapTry(value => Try(Instant.parse(value))), Encoder.encodeString.contramap(_.toString))
   // $COVERAGE-ON$
-  private given Codec[Note]       = stringCodec(Note.apply, _.value)
+  private given Codec[Note]                 = stringCodec(Note.apply, _.value)
+  private given Codec[NomenclatureName]     = stringCodec(NomenclatureName.apply, _.value)
+  private given Codec[NomenclatureInfo]     = stringCodec(NomenclatureInfo.apply, _.value)
+  private given Codec[PesticideType]        = stringCodec(PesticideType.apply, _.value)
+  private given Codec[SubstrateComponentId] = Codec.from(
+    Decoder.decodeString.emap(value => SubstrateComponentId.parse(value).toRight(s"invalid substrate component id: $value")),
+    Encoder.encodeString.contramap(_.value.toString)
+  )
+  private given Codec[PesticideId] = Codec.from(
+    Decoder.decodeString.emap(value => PesticideId.parse(value).toRight(s"invalid pesticide id: $value")),
+    Encoder.encodeString.contramap(_.value.toString)
+  )
   private given Codec[Percentage] = Codec.from(
     Decoder.decodeInt.emap(value => value.refineOption[Interval.Closed[1, 100]].toRight(s"invalid share: $value")),
     Encoder.encodeInt.contramap(value => value)
   )
-  private type JournalEnum = ActionType | MoistureLevel | SubstrateComponent | PlantStatus
+  private type JournalEnum = ActionType | MoistureLevel | PlantStatus
   private inline given [A <: JournalEnum](using Mirror.SumOf[A]): Codec[A] = ConfiguredEnumCodec.derived
   private given Encoder[Set[ActionType]]                                   = Encoder.encodeList[ActionType].contramap(_.toList.sortBy(_.toString))
   private inline given productCodec[A](using Mirror.ProductOf[A]): Codec.AsObject[A] = ConfiguredCodec.derived
@@ -107,10 +183,16 @@ object JournalApi:
   )
   private given Codec.AsObject[OperationDetails] = ConfiguredCodec.derived
 
-  private type WireText = PlantId | OperationId | Species | Nickname | Location | Note
+  private type WireText = PlantId | OperationId | Species | Nickname | Location | Note | NomenclatureName | NomenclatureInfo | PesticideType
   private given [A <: WireText]: Schema[A] = Schema.string
   // Tapir requires inverse mappings for opaque schemas; OpenAPI generation only reads their constraints.
   // $COVERAGE-OFF$
+  private given Schema[SubstrateComponentId] = Schema.string
+    .map(SubstrateComponentId.parse)(_.value.toString)
+    .format("uuid")
+  private given Schema[PesticideId] = Schema.string
+    .map(PesticideId.parse)(_.value.toString)
+    .format("uuid")
   private given Schema[Percentage] = Schema.schemaForInt
     .validate(Validator.min(1).and(Validator.max(100)))
     .map(_.refineOption[Interval.Closed[1, 100]])(value => value)
@@ -126,11 +208,16 @@ object JournalApi:
   private given Schema[OperationDetails.Care] = Schema
     .derived[OperationDetails.Care]
     .modify(_.actions)(_.copy(isOptional = false))
+    .modify(_.pesticides)(_.copy(isOptional = false))
     .modify(_.maybeNote)(_.copy(isOptional = false).nullable)
   private given Schema[OperationDetails.Repot] = Schema
     .derived[OperationDetails.Repot]
     .modify(_.substrate)(_.copy(isOptional = false))
     .modify(_.maybeNote)(_.copy(isOptional = false).nullable)
+  private given Schema[SubstrateComponentData] = Schema.derived[SubstrateComponentData]
+    .modify(_.maybeInfo)(_.copy(isOptional = false).nullable)
+  private given Schema[PesticideData] = Schema.derived[PesticideData]
+    .modify(_.maybeInfo)(_.copy(isOptional = false).nullable)
 
   private def stringCodec[A](decode: String => A, encode: A => String) =
     Codec.from(Decoder.decodeString.map(decode), Encoder.encodeString.contramap(encode))
@@ -142,6 +229,8 @@ object JournalApi:
     name match
       case "maybeNickname" => "nickname"
       case "maybeNote"     => "notes"
+      case "maybeInfo"     => "info"
+      case "pesticideType" => "type"
       case _               => name
 
   private def lowerCamel(name: String) =
